--- a/package.json
+++ b/package.json
@@ -15,5 +15,10 @@
   "bugs": {
     "url": "https://github.com/Lexdexic/WebScraping/issues"
   },
-  "homepage": "https://github.com/Lexdexic/WebScraping#readme"
+  "homepage": "https://github.com/Lexdexic/WebScraping#readme",
+  "dependencies": {
+    "cheerio": "^1.0.0-rc.2",
+    "express": "^4.16.3",
+    "node": "^9.8.0"
+  }
 }
